hphp/hack/test/typecheck/reactive/foreach_in_rx1.php.like_types.exp
File "foreach_in_rx1.php", line 6, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
File "foreach_in_rx1.php", line 13, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
File "foreach_in_rx1.php", line 20, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
File "foreach_in_rx1.php", line 27, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
File "foreach_in_rx1.php", line 34, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
File "foreach_in_rx1.php", line 43, characters 12-13:
Invalid `foreach` (Typing[4110])
File "foreach_in_rx1.php", line 43, characters 12-13:
Expected `Traversable<[unresolved]>` because this is used in a `foreach` statement
File "foreach_in_rx1.php", line 40, characters 48-63:
But got `~\HH\Traversable<int>#\HH\Rx\Traversable`
File "foreach_in_rx1.php", line 50, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
File "foreach_in_rx1.php", line 67, characters 12-13:
Invalid `foreach` (Typing[4110])
File "foreach_in_rx1.php", line 67, characters 12-13:
Expected `Traversable<[unresolved]>` because this is used in a `foreach` statement
File "foreach_in_rx1.php", line 61, characters 48-63:
But got `~\HH\Traversable<int>#\HH\Rx\Traversable`
File "foreach_in_rx1.php", line 67, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
